--- a/content/articles/1.get-started.md
+++ b/content/articles/1.get-started.md
@@ -10,7 +10,7 @@ layout: article
 
 # Get started with Alpine
 
-Creating a blog with Alpine is a command away, as well as deploying to many platforms.
+Creating a blog with Alpine is a command away, as well as deploying to many other platforms.
 
 ## Create a blog
 
